--- a/Standard Website/tab2.html
+++ b/Standard Website/tab2.html
@@ -7,13 +7,28 @@
 </head>
 <body class="bodystyling2">
     <nav class="mainmenu">
+       
         <ul class="navbar">
-            <li><a href="tab1.html">Tab 1</a></li>
+
+            <li><a class="navbar" href="tab1.html">
+        <div class="logoimage">
+            <img 
+             src="https://cdn.discordapp.com/attachments/509375219476070417/968093914433224704/96-961659_stan-dog-head-png.png" 
+            alt="Dog" 
+            class="navbar" width="50" height="50"
+            >
+        </div>
+</a> </li>
             <li><a href="tab2.html">Tab 2</a></li>
             <li><a href="tab3.html">Tab 3</a></li>
             <li><a href="tab4.html">Tab 4</a></li>
         </ul>
+        <!--This is an unordered list (no numbers)--> 
+        
     </nav>
+    <!--nav helps organise lists that have clickable links, it's specifically made to be used for navigation menus-->
+
+  
 <header class="header">
         <h1>My Work in Tab 2</h1>
 </header>
