--- a/Standard Website/tab1.html
+++ b/Standard Website/tab1.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <!--Defines the coding language used-->
 <html lang="en">
     <!--Defines what speaking/reading language used, in this case english-->
 <head>
-    <title>Tab 1</title>
+    <title>Dog appreciation site</title>
     <!-- The title of the website, used on the tab-->
     <meta charset="utf-8" />
     <!--Defines what characters can be used on the website-->
@@ -36,17 +36,21 @@
   
 
     <header class="header">
-        <h1>Dog appreciation site</h1>
+        <div class="image-container">
+            <div class="text">Dogs</div>
+        </div>
+        <h1>Dogs</h1>
 </header>
 <div class="wrapper">
-<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur 
-id erat elit blandit lobortis a a neque. Fusce lacus nisi, vulputate 
-quis vulputate, aliquam vitae libero. Sed congue ligula quis turpis 
-tincidunt ut ante feugiat. Sed semper tortor fermentum ligula fringilla 
-tristique. Mauris lacinia venenatis commodo. Curabitur scelerisque 
-pharetra facilisis. Donec et iaculis nunc. Curabitur rhoncus iaculis 
-diam, rutrum faucibus magna cursus in. Vestibulum eu consectetur magna. 
+<p> Dogs are mans best friend. They are the most popular pet in the world and this is a site for dogs! 
+    Here you can do a number of things:
 </p>
+
+<ul>
+    <li>Find the best toys for your dog!</li>
+    <li>Find the best treats for your dogs!</li>
+    <li>Find the best dog race for you!</li>
+</ul>
  <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur 
 id erat elit blandit lobortis a a neque. Fusce lacus nisi, vulputate 
 quis vulputate, aliquam vitae libero. Sed congue ligula quis turpis 
