--- a/Standard Website/tab2.html
+++ b/Standard Website/tab2.html
@@ -1,68 +1,174 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <title>Tab 2</title>
     <meta charset="utf-8" />
     <link href="navigation.css" rel="stylesheet" type="text/css" />
-</head>
-<body class="bodystyling2">
+  </head>
+  <body class="bodystyling2">
     <nav class="mainmenu">
-       
-        <ul class="navbar">
-
-            <li><a class="navbar" href="tab1.html">
-        <div class="logoimage">
-            <img 
-             src="https://cdn.discordapp.com/attachments/509375219476070417/968093914433224704/96-961659_stan-dog-head-png.png" 
-            alt="Dog" 
-            class="navbar" width="50" height="50"
-            >
-        </div>
-</a> </li>
-            <li><a href="tab2.html">Tab 2</a></li>
-            <li><a href="tab3.html">Tab 3</a></li>
-            <li><a href="tab4.html">Tab 4</a></li>
-        </ul>
-        <!--This is an unordered list (no numbers)--> 
-        
+      <ul class="navbar">
+        <li><a href="tab1.html">Tab 1</a></li>
+        <li><a href="tab2.html">Tab 2</a></li>
+        <li><a href="tab3.html">Tab 3</a></li>
+        <li><a href="tab4.html">Tab 4</a></li>
+      </ul>
     </nav>
-    <!--nav helps organise lists that have clickable links, it's specifically made to be used for navigation menus-->
+    <header class="header">
+      <h1>My Work in Tab 2</h1>
+    </header>
 
-  
-<header class="header">
-        <h1>My Work in Tab 2</h1>
-</header>
-
-<h2>Lists</h2>
-  <!--Unordered list start-->
-  <h3>An unordered list of my hobbies</h3>
-  <ul>
-      <li>Breathing</li>
-      <li>Living</li>
-        <ul>
-            <li>Living yesterday</li>
-            <li>Living today</li>
-            <Li>Living tommorow</Li>
+    <div class="content">
+      <div class="category">
+        <h2>Dog food</h2>
+        <ul class="items">
+          <li>
+            <a class="item-link" href="https://www.amazon.se" target="_blank">
+              <img
+                src="https://img.chewy.com/is/image/catalog/49395_MAIN._AC_SL1500_V1647912723_.jpg"
+              />
+              <div>
+                <span class="item-name">Leksak</span>
+                <span class="item-price">120 kr</span>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a class="item-link" href="https://www.amazon.se" target="_blank">
+              <img
+                src="https://www.thesprucepets.com/thmb/iCkghHNEnz3ocoek43rn5K_0DdE=/fit-in/1223x1500/filters:no_upscale():max_bytes(150000):strip_icc()/PuppyChowHealthyStartSalmonFlavorTrainingDogTreats-9b211e2fab694d8196c9a14d5a921430.jpg"
+              />
+              <div>
+                <span class="item-name">Leksak</span>
+                <span class="item-price">120 kr</span>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a class="item-link" href="https://www.amazon.se" target="_blank">
+              <img
+                src="https://www.thesprucepets.com/thmb/qr6rsj4kzWUdNtgN0qMve78kv4c=/fit-in/1162x1500/filters:no_upscale():max_bytes(150000):strip_icc()/wellnessbites-fbf422a02d6e42a281c9725e92b35510.jpg"
+              />
+              <div>
+                <span class="item-name">Leksak</span>
+                <span class="item-price">120 kr</span>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a class="item-link" href="https://www.amazon.se" target="_blank">
+              <img
+                src="https://cdn.shoplightspeed.com/shops/620323/files/24857882/650x750x2/image.jpg"
+              />
+              <div>
+                <span class="item-name">Leksak</span>
+                <span class="item-price">120 kr</span>
+              </div>
+            </a>
+          </li>
         </ul>
-      <li>Walking</li>
-  </ul>
-        <!--Unordered list end-->
-        <!--Ordered list start-->
-        <h3>And here they are ordered in what I found most fun</h3>
-    <ol>
-        <li>Breathing</li>
-        <li>Walking</li>
-        <li>Living</li>
-        <ul>
-            <li>Living yesterday</li>
-            <li>Living today</li>
-            <li>Living tommorow</li>
+      </div>
+      <div class="category">
+        <h2>Dog Toys</h2>
+        <ul class="items">
+          <li>
+            <a class="item-link" href="https://www.amazon.se" target="_blank">
+              <img
+                src="https://image.dhgate.com/0x0s/f2-albu-g9-M00-BF-A7-rBVaWFyCK7-AcCgfAAIu4eSXU6o147.jpg/rolig-hundknut-biting-toy-18cm-valp-bomull.jpg"
+              />
+              <div>
+                <span class="item-name">Leksak</span>
+                <span class="item-price">120 kr</span>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a class="item-link" href="https://www.amazon.se" target="_blank">
+              <img
+                src="https://m.media-amazon.com/images/I/71jyEupon3L._AC_SX466_.jpg"
+              />
+              <div>
+                <span class="item-name">Leksak</span>
+                <span class="item-price">120 kr</span>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a class="item-link" href="https://www.amazon.se" target="_blank">
+              <img
+                src="https://www.thesprucepets.com/thmb/oKCuFx61mVVx9aduB_NQkg9EF3k=/fit-in/1500x1209/filters:no_upscale():max_bytes(150000):strip_icc()/8152Iwun6AL._AC_SL1500_-faf71d18a56d47e49526bf2582eb6fd3.jpg"
+              />
+              <div>
+                <span class="item-name">Leksak</span>
+                <span class="item-price">120 kr</span>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a class="item-link" href="https://www.amazon.se" target="_blank">
+              <img src="https://m.media-amazon.com/images/I/41neHNOcBuL.jpg" />
+              <div>
+                <span class="item-name">Leksak</span>
+                <span class="item-price">120 kr</span>
+              </div>
+            </a>
+          </li>
         </ul>
-    </ol>
-        <!--Ordered list end-->
+      </div>
+      <div class="category">
+        <h2>Cloths and Accessories</h2>
+        <ul class="items">
+          <li>
+            <a class="item-link" href="https://www.amazon.se" target="_blank">
+              <img
+                src="https://cdn.shopify.com/s/files/1/0388/6589/products/ScreenShot2020-06-18at1.56.42PM_600x.png?v=1592505385"
+              />
+              <div>
+                <span class="item-name">Leksak</span>
+                <span class="item-price">120 kr</span>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a class="item-link" href="https://www.amazon.se" target="_blank">
+              <img
+                src="https://cdn.shopify.com/s/files/1/0388/6589/products/ScreenShot2020-06-18at2.00.13PM_600x.png?v=1592505415"
+              />
+              <div>
+                <span class="item-name">Leksak</span>
+                <span class="item-price">120 kr</span>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a class="item-link" href="https://www.amazon.se" target="_blank">
+              <img
+                src="https://cdn.shopify.com/s/files/1/0388/6589/products/41DFa6jwxRL_600x.jpg?v=1569167359"
+              />
 
- <footer class="footer">
- <p>All rights reserved - &#169; Copyright</p>
- </footer>
-</body>
+              <div>
+                <span class="item-name">Leksak</span>
+                <span class="item-price">120 kr</span>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a class="item-link" href="https://www.amazon.se" target="_blank">
+              <img
+                src="https://cdn.shopify.com/s/files/1/0388/6589/products/ScreenShot2020-08-05at3.57.25PM_600x.png?v=1596657534"
+              />
+              <div>
+                <span class="item-name">Leksak</span>
+                <span class="item-price">120 kr</span>
+              </div>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <footer class="footer">
+      <p>All rights reserved - &#169; Copyright</p>
+    </footer>
+  </body>
 </html>
