--- a/Standard Website/tab2.html
+++ b/Standard Website/tab2.html
@@ -7,20 +7,36 @@
   </head>
   <body class="bodystyling2">
     <nav class="mainmenu">
-      <ul class="navbar">
-        <li><a href="tab1.html">Tab 1</a></li>
-        <li><a href="tab2.html">Tab 2</a></li>
-        <li><a href="tab3.html">Tab 3</a></li>
-        <li><a href="tab4.html">Tab 4</a></li>
-      </ul>
+       
+        <ul class="navbar">
+
+            <li>
+                <a class="navbar" href="tab1.html">
+                    <div class="logoimage">
+                        <img 
+                        src="https://cdn.discordapp.com/attachments/509375219476070417/968093914433224704/96-961659_stan-dog-head-png.png" 
+                        alt="Dog" 
+                        class="navbar" width="50" height="50"
+                        >
+                    </div>
+                </a> 
+            </li>
+            <li><a href="tab3.html">Dog breeds</a></li>
+            <li><a href="tab2.html">Toys</a></li>
+            <li><a href="tab4.html">Contact us</a></li>
+        </ul>
+        <!--This is an unordered list (no numbers)--> 
+        
     </nav>
     <header class="header">
-      <h1>My Work in Tab 2</h1>
+        <div class="image-container3">
+            <div class="text">Dog Accessories</div>
+        </div>
     </header>
 
     <div class="content">
       <div class="category">
-        <h2>Dog food</h2>
+        <h2 class="centered">Dog food</h2>
         <ul class="items">
           <li>
             <a class="item-link" href="https://www.amazon.se" target="_blank">
@@ -69,7 +85,7 @@
         </ul>
       </div>
       <div class="category">
-        <h2>Dog Toys</h2>
+        <h2 class="centered">Dog Toys</h2>
         <ul class="items">
           <li>
             <a class="item-link" href="https://www.amazon.se" target="_blank">
@@ -116,7 +132,7 @@
         </ul>
       </div>
       <div class="category">
-        <h2>Cloths and Accessories</h2>
+        <h2 class="centered">Cloths and Accessories</h2>
         <ul class="items">
           <li>
             <a class="item-link" href="https://www.amazon.se" target="_blank">
