--- a/Standard Website/tab4.html
+++ b/Standard Website/tab4.html
@@ -4,6 +4,9 @@
     <title>Tab 4</title>
     <meta charset="utf-8" />
     <link href="navigation.css" rel="stylesheet" type="text/css" />
+    <style>
+        @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400');
+        </style>
 </head>
 <body class="bodystyling4">
     <nav class="mainmenu">
@@ -19,9 +22,9 @@
             >
         </div>
 </a> </li>
-            <li><a href="tab2.html">Tab 2</a></li>
-            <li><a href="tab3.html">Tab 3</a></li>
-            <li><a href="tab4.html">Tab 4</a></li>
+            <li><a href="tab3.html">Dog breeds</a></li>
+            <li><a href="tab2.html">Toys</a></li>
+            <li><a href="tab4.html">Contact us</a></li>
         </ul>
         <!--This is an unordered list (no numbers)--> 
         
@@ -29,29 +32,32 @@
     <!--nav helps organise lists that have clickable links, it's specifically made to be used for navigation menus-->
 
   
-<header class="header">
-        <h1>My Work in Tab 4</h1>
-</header>
-<div class="wrapper">
-<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur 
-id erat elit blandit lobortis a a neque. Fusce lacus nisi, vulputate 
-quis vulputate, aliquam vitae libero. Sed congue ligula quis turpis 
-tincidunt ut ante feugiat. Sed semper tortor fermentum ligula fringilla 
-tristique. Mauris lacinia venenatis commodo. Curabitur scelerisque 
-pharetra facilisis. Donec et iaculis nunc. Curabitur rhoncus iaculis 
-diam, rutrum faucibus magna cursus in. Vestibulum eu consectetur magna. 
-</p>
- <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur 
-id erat elit blandit lobortis a a neque. Fusce lacus nisi, vulputate 
-quis vulputate, aliquam vitae libero. Sed congue ligula quis turpis 
-tincidunt ut ante feugiat. Sed semper tortor fermentum ligula fringilla 
-tristique. Mauris lacinia venenatis commodo. Curabitur scelerisque 
-pharetra facilisis. Donec et iaculis nunc. Curabitur rhoncus iaculis 
-diam, rutrum faucibus magna cursus in. Vestibulum eu consectetur magna. 
-</p>
-</div>
- <footer class="footer">
- <p>All rights reserved - &#169; Copyright</p>
- </footer>
+    <div class="socials">
+        <ul>
+          <li>
+            <a href="#">
+              <i class="fa fa-facebook" aria-hidden="true"></i>
+              <span> - Facebook</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="fa fa-twitter" aria-hidden="true"></i>
+              <span> - Twitter</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="fa fa-google-plus" aria-hidden="true"></i>
+              <span> - Youtube</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="fa fa-instagram" aria-hidden="true"></i>
+              <span> - Instagram</span>
+            </a>
+          </li>
+        </div>
 </body>
 </html>
