--- a/Standard Website/tab2.html
+++ b/Standard Website/tab2.html
@@ -3,6 +3,7 @@
   <head>
     <title>Tab 2</title>
     <meta charset="utf-8" />
+    <meta name="viewport"/>
     <link href="navigation.css" rel="stylesheet" type="text/css" />
   </head>
   <body class="bodystyling2">
@@ -23,25 +24,28 @@
             </li>
             <li><a href="tab3.html">Dog breeds</a></li>
             <li><a href="tab2.html">Toys</a></li>
+            <li><a href="tab5.html">Food</a></li>
+            <li><a href="tab6.html">Accessories</a></li>
             <li><a href="tab4.html">Contact us</a></li>
         </ul>
         <!--This is an unordered list (no numbers)--> 
         
     </nav>
+
     <header class="header">
         <div class="image-container3">
-            <div class="text">Dog Accessories</div>
+            <div class="text">Dog Toys</div>
         </div>
     </header>
 
     <div class="content">
       <div class="category">
-        <h2 class="centered">Dog food</h2>
+        <h2 class="centered">Dog toys</h2>
         <ul class="items">
           <li>
             <a class="item-link" href="https://www.amazon.se" target="_blank">
               <img
-                src="https://img.chewy.com/is/image/catalog/49395_MAIN._AC_SL1500_V1647912723_.jpg"
+                src="https://m.media-amazon.com/images/I/81iBqUeAXaS._AC_UL640_QL65_.jpg"
               />
               <div>
                 <span class="item-name">Leksak</span>
@@ -52,7 +56,7 @@
           <li>
             <a class="item-link" href="https://www.amazon.se" target="_blank">
               <img
-                src="https://www.thesprucepets.com/thmb/iCkghHNEnz3ocoek43rn5K_0DdE=/fit-in/1223x1500/filters:no_upscale():max_bytes(150000):strip_icc()/PuppyChowHealthyStartSalmonFlavorTrainingDogTreats-9b211e2fab694d8196c9a14d5a921430.jpg"
+                src="https://m.media-amazon.com/images/I/61mQnQqoiyL._AC_UL640_QL65_.jpg"
               />
               <div>
                 <span class="item-name">Leksak</span>
@@ -63,7 +67,7 @@
           <li>
             <a class="item-link" href="https://www.amazon.se" target="_blank">
               <img
-                src="https://www.thesprucepets.com/thmb/qr6rsj4kzWUdNtgN0qMve78kv4c=/fit-in/1162x1500/filters:no_upscale():max_bytes(150000):strip_icc()/wellnessbites-fbf422a02d6e42a281c9725e92b35510.jpg"
+                src="https://m.media-amazon.com/images/I/81Agaj-W5LL._AC_UL640_QL65_.jpg"
               />
               <div>
                 <span class="item-name">Leksak</span>
@@ -74,7 +78,7 @@
           <li>
             <a class="item-link" href="https://www.amazon.se" target="_blank">
               <img
-                src="https://cdn.shoplightspeed.com/shops/620323/files/24857882/650x750x2/image.jpg"
+                src="https://m.media-amazon.com/images/I/71LvfZVO11L._AC_UL640_QL65_.jpg"
               />
               <div>
                 <span class="item-name">Leksak</span>
@@ -85,7 +89,6 @@
         </ul>
       </div>
       <div class="category">
-        <h2 class="centered">Dog Toys</h2>
         <ul class="items">
           <li>
             <a class="item-link" href="https://www.amazon.se" target="_blank">
@@ -131,55 +134,14 @@
           </li>
         </ul>
       </div>
-      <div class="category">
-        <h2 class="centered">Cloths and Accessories</h2>
-        <ul class="items">
-          <li>
-            <a class="item-link" href="https://www.amazon.se" target="_blank">
-              <img
-                src="https://cdn.shopify.com/s/files/1/0388/6589/products/ScreenShot2020-06-18at1.56.42PM_600x.png?v=1592505385"
-              />
-              <div>
-                <span class="item-name">Leksak</span>
-                <span class="item-price">120 kr</span>
-              </div>
-            </a>
-          </li>
-          <li>
-            <a class="item-link" href="https://www.amazon.se" target="_blank">
-              <img
-                src="https://cdn.shopify.com/s/files/1/0388/6589/products/ScreenShot2020-06-18at2.00.13PM_600x.png?v=1592505415"
-              />
-              <div>
-                <span class="item-name">Leksak</span>
-                <span class="item-price">120 kr</span>
-              </div>
-            </a>
-          </li>
-          <li>
-            <a class="item-link" href="https://www.amazon.se" target="_blank">
-              <img
-                src="https://cdn.shopify.com/s/files/1/0388/6589/products/41DFa6jwxRL_600x.jpg?v=1569167359"
-              />
-
-              <div>
-                <span class="item-name">Leksak</span>
-                <span class="item-price">120 kr</span>
-              </div>
-            </a>
-          </li>
-          <li>
-            <a class="item-link" href="https://www.amazon.se" target="_blank">
-              <img
-                src="https://cdn.shopify.com/s/files/1/0388/6589/products/ScreenShot2020-08-05at3.57.25PM_600x.png?v=1596657534"
-              />
-              <div>
-                <span class="item-name">Leksak</span>
-                <span class="item-price">120 kr</span>
-              </div>
-            </a>
-          </li>
-        </ul>
+      <div>
+          <p class="centered">
+            The best dog toys will vary depending on life stage, personality, habits, preference 
+            and even health considerations. Chew toys work well for puppies and adult dogs alike, 
+            but some dogs are tough chewers and may require extra-strong construction. Fetch toys 
+            encourage exercise and interaction with you, while interactive toys help stimulate 
+            canines mentally and keep them interested.
+          </p>
       </div>
     </div>
 
