--- a/Standard Website/tab3.html
+++ b/Standard Website/tab3.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
-<!--Defines the coding language used-->
 <html lang="en">
-    <!--Defines what speaking/reading language used, in this case english-->
-<head>
-    <title>Dog appreciation site</title>
-    <!-- The title of the website, used on the tab-->
+  <head>
+    <title>Tab 2</title>
     <meta charset="utf-8" />
-    <!--Defines what characters can be used on the website-->
+    <meta name="viewport"/>
     <link href="navigation.css" rel="stylesheet" type="text/css" />
-    <!-- Allows the site to take code from navigation.css and use it here-->
-</head>
-<body class="bodystyling">
+  </head>
+  <body class="bodystyling2">
     <nav class="mainmenu">
        
         <ul class="navbar">
@@ -28,6 +24,8 @@
             </li>
             <li><a href="tab3.html">Dog breeds</a></li>
             <li><a href="tab2.html">Toys</a></li>
+            <li><a href="tab5.html">Food</a></li>
+            <li><a href="tab6.html">Accessories</a></li>
             <li><a href="tab4.html">Contact us</a></li>
         </ul>
         <!--This is an unordered list (no numbers)--> 
