--- a/Standard Website/tab4.html
+++ b/Standard Website/tab4.html
@@ -1,29 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <title>Tab 4</title>
+  <head>
+    <title>Tab 2</title>
     <meta charset="utf-8" />
+    <meta name="viewport"/>
     <link href="navigation.css" rel="stylesheet" type="text/css" />
-    <style>
-        @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400');
-        </style>
-</head>
-<body class="bodystyling4">
+  </head>
+  <body class="bodystyling4">
     <nav class="mainmenu">
        
         <ul class="navbar">
 
-            <li><a class="navbar" href="tab1.html">
-        <div class="logoimage">
-            <img 
-             src="https://cdn.discordapp.com/attachments/509375219476070417/968093914433224704/96-961659_stan-dog-head-png.png" 
-            alt="Dog" 
-            class="navbar" width="50" height="50"
-            >
-        </div>
-</a> </li>
+            <li>
+                <a class="navbar" href="tab1.html">
+                    <div class="logoimage">
+                        <img 
+                        src="https://cdn.discordapp.com/attachments/509375219476070417/968093914433224704/96-961659_stan-dog-head-png.png" 
+                        alt="Dog" 
+                        class="navbar" width="50" height="50"
+                        >
+                    </div>
+                </a> 
+            </li>
             <li><a href="tab3.html">Dog breeds</a></li>
             <li><a href="tab2.html">Toys</a></li>
+            <li><a href="tab5.html">Food</a></li>
+            <li><a href="tab6.html">Accessories</a></li>
             <li><a href="tab4.html">Contact us</a></li>
         </ul>
         <!--This is an unordered list (no numbers)--> 
