--- a/Standard Website/tab1.html
+++ b/Standard Website/tab1.html
@@ -20,7 +20,7 @@
             <nav class="mainmenu">
        
         <ul class="navbar">
-
+        <div class="navbarfix">
             <li>
                 <a class="navbar" href="tab1.html">
                     <div class="logoimage">
@@ -32,13 +32,14 @@
                     </div>
                 </a> 
             </li>
-            <div class="navbarfix">
+            <div class="navbarfix2">
             <li><a href="tab3.html">Dog breeds</a></li>
             <li><a href="tab2.html">Toys</a></li>
             <li><a href="tab5.html">Food</a></li>
             <li><a href="tab6.html">Accessories</a></li>
             <li><a href="tab4.html">Contact us</a></li>
-            </div>
+        </div>
+        </div>
         </ul>
         <!--This is an unordered list (no numbers)--> 
         
